[package]
name = "cliphoard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
arboard = "3.4.1"
clap = { version = "4.5.32", features = ["derive"] }
clipboard = "0.5.0"
directories = "6.0.0"
enigo = "0.3.0"
font-kit = "0.14.2"
peak_alloc = "0.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[dependencies.sdl2]
version = "0.37"
default-features = true
features = ["ttf", "default"]


